hphp/hack/test/typecheck/new_inference/transitive_error.php.like_types.exp
File "transitive_error.php", line 28, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_error.php", line 18, characters 18-18:
Expected D
File "transitive_error.php", line 25, characters 12-15:
But got dynamic, the result of accessing a property of a dynamic type
